Create main layout with containers

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <script src="./java.js" defer></script>
   </head>
   <body>
-    <h1>hello</h1>
+    <div class="layout-container">
+      <header class="header-container">
+        <div class="inside-header-container-top"></div>
+        <div class="inside-header-container-bot"></div>
+      </header>
+      <section class="sidebar-container"></section>
+      <section class="content-container">
+        <div class="inside-content-container-main"></div>
+        <div class="inside-content-container-side"></div>
+      </section>
+    </div>
   </body>
 </html>
 
-!
