Fill the rest of header with elements and fill content main container and rough position elements in it

--- a/index.html
+++ b/index.html
@@ -35,14 +35,29 @@
               />
               <img
                 src="./img/alert-cat.svg"
-                alt="alerted cat"
+                alt="profile icon"
                 class="person-profile-icon"
               />
             </div>
             <p class="user-name">Kiki Highlander</p>
           </div>
         </div>
-        <div class="inside-header-container-bot"></div>
+        <div class="inside-header-container-bot">
+          <img
+            src="./img/alert-cat.svg"
+            alt="profile icon"
+            class="person-profile-big"
+          />
+          <div class="introduction-text-container">
+            <p>Hi there,</p>
+            <h2>Kiki Highlander(@Kiki)</h2>
+          </div>
+          <div class="button-container-head">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
       </header>
 
       <section class="sidebar-container">
@@ -137,7 +152,80 @@
       </section>
 
       <section class="content-container">
-        <div class="inside-content-container-main"></div>
+        <div class="inside-content-container-main">
+          <div class="project-cards">
+            <h3>Kiki Project number 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+          <div class="project-cards">
+            <h3>Kiki Project number 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+          <div class="project-cards">
+            <h3>Kiki Project number 3</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+          <div class="project-cards">
+            <h3>Kiki Project number 4</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+          <div class="project-cards">
+            <h3>Kiki Project number 5</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+          <div class="project-cards">
+            <h3>Kiki Project number 6</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
+              architecto repudiandae?
+            </p>
+            <div class="card-icon-container">
+              <img src="./img/content-icons/eye.svg" alt="eye outline" />
+              <img src="./img/content-icons/star.svg" alt="star outline" />
+              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            </div>
+          </div>
+        </div>
         <div class="inside-content-container-side"></div>
       </section>
     </div>
