Fill content container with elements and position them

--- a/index.html
+++ b/index.html
@@ -152,81 +152,158 @@
       </section>
 
       <section class="content-container">
-        <div class="inside-content-container-main">
-          <div class="project-cards">
-            <h3>Kiki Project number 1</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+        <div>
+          <!-- Just a container to allow me to put a title above the grid-->
+          <h5 class="titles-of-content">Your Projects</h5>
+          <div class="inside-content-container-main">
+            <div class="project-cards">
+              <h3>Kiki Project number 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
-          </div>
-          <div class="project-cards">
-            <h3>Kiki Project number 2</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            <div class="project-cards">
+              <h3>Kiki Project number 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
-          </div>
-          <div class="project-cards">
-            <h3>Kiki Project number 3</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            <div class="project-cards">
+              <h3>Kiki Project number 3</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
-          </div>
-          <div class="project-cards">
-            <h3>Kiki Project number 4</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            <div class="project-cards">
+              <h3>Kiki Project number 4</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
-          </div>
-          <div class="project-cards">
-            <h3>Kiki Project number 5</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            <div class="project-cards">
+              <h3>Kiki Project number 5</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
-          </div>
-          <div class="project-cards">
-            <h3>Kiki Project number 6</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum saepe
-              architecto repudiandae?
-            </p>
-            <div class="card-icon-container">
-              <img src="./img/content-icons/eye.svg" alt="eye outline" />
-              <img src="./img/content-icons/star.svg" alt="star outline" />
-              <img src="./img/content-icons/share.svg" alt="sharing outline" />
+            <div class="project-cards">
+              <h3>Kiki Project number 6</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
             </div>
           </div>
         </div>
-        <div class="inside-content-container-side"></div>
+
+        <div class="inside-content-container-side">
+          <div>
+            <!-- Just a container to allow me to put a title above the grid-->
+            <h5 class="titles-of-content">Announcments</h5>
+
+            <div class="side-card1">
+              <div class="side-card-content-container">
+                <h4>Side Maintainance</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </div>
+              <div class="side-card-content-container">
+                <h4>Community Share</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </div>
+              <div class="side-card-content-container">
+                <h4>Updated Private Policy</h4>
+                <p>Lorem ipsum dolor sit amet consectetur.</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <!-- Just a container to allow me to put a title above the grid-->
+            <h5 class="titles-of-content">Trending</h5>
+            <div class="side-card2">
+              <div class="trending-user-container">
+                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <div class="trending-user-info-container">
+                  <h5>@Kiki</h5>
+                  <p>New snack project</p>
+                </div>
+              </div>
+              <div class="trending-user-container">
+                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <div class="trending-user-info-container">
+                  <h5>@Gigi</h5>
+                  <p>New attack project</p>
+                </div>
+              </div>
+              <div class="trending-user-container">
+                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <div class="trending-user-info-container">
+                  <h5>@Jennu</h5>
+                  <p>Travel plan project</p>
+                </div>
+              </div>
+              <div class="trending-user-container">
+                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <div class="trending-user-info-container">
+                  <h5>@Mindu</h5>
+                  <p>Wrapping statistics</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
