Create basic style , color schemes and fonts

--- a/index.html
+++ b/index.html
@@ -61,98 +61,100 @@
       </header>
 
       <section class="sidebar-container">
-        <div class="h1-container">
-          <img
-            class="sidebar-icon"
-            src="./img/sidebar-icons/sidebar-icon-cat.svg"
-            alt="cute cat"
-          />
-          <h1 class="sidebar-h1">Dashboard</h1>
-        </div>
-        <div class="menu-container">
-          <ul>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/home.svg"
-                alt="shape of a home"
-                class="home-icon"
-              />
-              <a href="#"><li>Home</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/privacy.svg"
-                alt="siluet of human"
-                class="profile-icon"
-              />
-              <a href="#"><li>Profile</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/messages.svg"
-                alt="letter outline"
-                class="message-icon"
-              />
-              <a href="#"><li>Message</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/time-outline.svg"
-                alt="clock outline"
-                class="history-icon"
-              />
-              <a href="#"><li>History</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/tasks.svg"
-                alt="paper outline"
-                class="tasks-icon"
-              />
-              <a href="#"><li>Tasks</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/communities.svg"
-                alt="multiple people outline"
-                class="communities-icon"
-              />
-              <a href="#"><li>Communities</li></a>
-            </div>
-          </ul>
-        </div>
-        <div class="menu-setting-container">
-          <ul>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/settings.svg"
-                alt="gear outline"
-                class="setting-icon"
-              />
-              <a href="#"><li>Settings</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/support.svg"
-                alt="question mark outline"
-                class="support-icon"
-              />
-              <a href="#"><li>Support</li></a>
-            </div>
-            <div class="sidebar-href-container">
-              <img
-                src="./img/sidebar-icons/privacy.svg"
-                alt="shield outline"
-                class="privacy-icon"
-              />
-              <a href="#"><li>Privacy</li></a>
-            </div>
-          </ul>
+        <div class="fixed-sidebar-container">
+          <div class="h1-container">
+            <img
+              class="sidebar-icon"
+              src="./img/sidebar-icons/sidebar-icon-cat.svg"
+              alt="cute cat"
+            />
+            <h1 class="sidebar-h1">Dashboard</h1>
+          </div>
+          <div class="menu-container">
+            <ul>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/home.svg"
+                  alt="shape of a home"
+                  class="home-icon"
+                />
+                <a href="#"><li>Home</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/privacy.svg"
+                  alt="siluet of human"
+                  class="profile-icon"
+                />
+                <a href="#"><li>Profile</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/messages.svg"
+                  alt="letter outline"
+                  class="message-icon"
+                />
+                <a href="#"><li>Message</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/time-outline.svg"
+                  alt="clock outline"
+                  class="history-icon"
+                />
+                <a href="#"><li>History</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/tasks.svg"
+                  alt="paper outline"
+                  class="tasks-icon"
+                />
+                <a href="#"><li>Tasks</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/communities.svg"
+                  alt="multiple people outline"
+                  class="communities-icon"
+                />
+                <a href="#"><li>Communities</li></a>
+              </div>
+            </ul>
+          </div>
+          <div class="menu-setting-container">
+            <ul>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/settings.svg"
+                  alt="gear outline"
+                  class="setting-icon"
+                />
+                <a href="#"><li>Settings</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/support.svg"
+                  alt="question mark outline"
+                  class="support-icon"
+                />
+                <a href="#"><li>Support</li></a>
+              </div>
+              <div class="sidebar-href-container">
+                <img
+                  src="./img/sidebar-icons/privacy.svg"
+                  alt="shield outline"
+                  class="privacy-icon"
+                />
+                <a href="#"><li>Privacy</li></a>
+              </div>
+            </ul>
+          </div>
         </div>
       </section>
 
       <section class="content-container">
-        <div>
+        <div class="filler-div">
           <!-- Just a container to allow me to put a title above the grid-->
           <h5 class="titles-of-content">Your Projects</h5>
           <div class="inside-content-container-main">
@@ -252,7 +254,7 @@
         <div class="inside-content-container-side">
           <div>
             <!-- Just a container to allow me to put a title above the grid-->
-            <h5 class="titles-of-content">Announcments</h5>
+            <h5 class="titles-of-content-side">Announcments</h5>
 
             <div class="side-card1">
               <div class="side-card-content-container">
@@ -271,31 +273,47 @@
           </div>
           <div>
             <!-- Just a container to allow me to put a title above the grid-->
-            <h5 class="titles-of-content">Trending</h5>
+            <h5 class="titles-of-content-side">Trending</h5>
             <div class="side-card2">
               <div class="trending-user-container">
-                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <img
+                  class="user-1"
+                  src="./img/alert-cat.svg"
+                  alt="Alert cat icon"
+                />
                 <div class="trending-user-info-container">
                   <h5>@Kiki</h5>
                   <p>New snack project</p>
                 </div>
               </div>
               <div class="trending-user-container">
-                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <img
+                  class="user-2"
+                  src="./img/alert-cat.svg"
+                  alt="Alert cat icon"
+                />
                 <div class="trending-user-info-container">
                   <h5>@Gigi</h5>
                   <p>New attack project</p>
                 </div>
               </div>
               <div class="trending-user-container">
-                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <img
+                  class="user-3"
+                  src="./img/alert-cat.svg"
+                  alt="Alert cat icon"
+                />
                 <div class="trending-user-info-container">
                   <h5>@Jennu</h5>
                   <p>Travel plan project</p>
                 </div>
               </div>
               <div class="trending-user-container">
-                <img src="./img/alert-cat.svg" alt="Alert cat icon" />
+                <img
+                  class="user-4"
+                  src="./img/alert-cat.svg"
+                  alt="Alert cat icon"
+                />
                 <div class="trending-user-info-container">
                   <h5>@Mindu</h5>
                   <p>Wrapping statistics</p>
