Change icons , start finalizing design

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <div class="sidebar-href-container">
                 <img
-                  src="./img/sidebar-icons/privacy.svg"
+                  src="./img/sidebar-icons/profile.svg"
                   alt="siluet of human"
                   class="profile-icon"
                 />
@@ -235,6 +235,36 @@
             </div>
             <div class="project-cards">
               <h3>Kiki Project number 6</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
+            </div>
+            <div class="project-cards">
+              <h3>Kiki Project number 7</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
+                saepe architecto repudiandae?
+              </p>
+              <div class="card-icon-container">
+                <img src="./img/content-icons/eye.svg" alt="eye outline" />
+                <img src="./img/content-icons/star.svg" alt="star outline" />
+                <img
+                  src="./img/content-icons/share.svg"
+                  alt="sharing outline"
+                />
+              </div>
+            </div>
+            <div class="project-cards">
+              <h3>Kiki Project number 8</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum
                 saepe architecto repudiandae?
